--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
   "devDependencies": {
     "@types/jest": "^29.2.4",
     "@types/node": "^18.11.18",
+    "@types/validator": "^13.7.10",
     "git-commit-msg-linter": "^4.5.0",
     "husky": "^8.0.2",
     "jest": "^29.3.1",
     "ts-jest": "^29.0.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "validator": "^13.7.0"
   }
 }
