--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/jest": "^29.2.4",
     "@types/node": "^18.11.18",
     "@types/validator": "^13.7.10",
@@ -24,6 +25,7 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "validator": "^13.7.0"
   }
 }
