--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@shelf/jest-mongodb": "^4.1.4",
     "@types/bcryptjs": "^2.4.2",
     "@types/jest": "^29.2.4",
     "@types/node": "^18.11.18",
