--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@types/express": "^4.17.15",
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "mongodb": "^4.13.0",
