--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@types/jest": "^29.2.4",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^18.11.18",
+    "@types/supertest": "^2.0.12",
     "@types/validator": "^13.7.10",
     "git-commit-msg-linter": "^4.5.0",
     "husky": "^8.0.2",
     "jest": "^29.3.1",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.0.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
